# quick-pblish-v1

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  uno.config.ts  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
specs/001-local-content-management/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-multi-platform-publish/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: App.vue  env.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  publish.json
src-tauri/icons/: icon.icns
src-tauri/src/: domain.rs  error.rs  index.rs  lib.rs  main.rs  state.rs  watcher.rs
src-tauri/src/adapters/: juejin.rs  mod.rs  weixin.rs  zhihu.rs
src-tauri/src/commands/: article.rs  asset.rs  file_tree.rs  mod.rs  publish.rs  test_support.rs  workspace.rs
src-tauri/src/publish/: history.rs  mod.rs  session.rs  sync.rs  webview.rs
src-tauri/src/storage/: article_fs.rs  config.rs  frontmatter.rs  mod.rs
src/bindings/: commands.ts  types.ts
src/router/: index.ts
src/services/: error.ts  (+3 more)
tests/: error.test.ts  publish-store.connection.test.ts  render.test.ts  sync-result-list.test.ts
(+27 files in other folders)
