[package]
name = "quick-publish"
version = "0.1.0"
description = "多平台内容发布桌面应用 - 本地内容基座"
authors = ["zxyGo"]
license = "MIT"
edition = "2021"
rust-version = "1.75"

[lib]
name = "quick_publish_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
trash = "5"
notify = "7"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
# 002-multi-platform-publish：会话凭据加密落盘 + OS 安全设施密钥（FR-005 / research R3）
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"

[features]
# this feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
